# esp32-smoke-alarm-sensor

./: CMakeLists.txt  Makefile  README.md
main/: Kconfig.projbuild  main.c
